# BitcoinPricePredictor

./: .gitignore  .replit  README.md  ai_analysis (copy).py  ai_analysis - working GPT revised.py  ai_analysis.py  ai_analysis_enhanced.py  app.py  bitcoin_analysis_cache.json  bitcoin_predictions_history.json  chart_generator.py  data_fetcher.py  database.py  openai_client.py  pyproject.toml  replit.md  scheduler.py  social_media_generator.py  styles.css  technical_analysis.py  utils.py
attached_assets/: Pasted--Complete-AI-Analysis-technical-summary-COMPREHENSIVE-TECHNICAL-ANALYSIS-n-n-Current-Pr-1755974014864_1755974014865.txt
